--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "axios": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-persist": "^1.0.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
